
- NEW: S3 Generics: plot() has the additional inputs `legend`, `quiet` and `choose`. summary() allows results to be exported via `export = TRUE`.

- CHANGE: `parallel = FALSE` is now the default. Use `parallel = TRUE` if your datasets are particularly large, or the function is taking too long to process.
- CHANGE: An increase to the internal `thin` value (see above) from 1000 to 5000 may mean results will differ slightly from the previous version (but should be more accurate).
- CHANGE: Output has been completely restructured and elements renamed. Previous code used to extract results will likely now not work.

- FIX:  Fix for problems of function importing `broken_stick()` into the cluster, resulting in the functions failing if the package wasn't loaded but called, i.e. using `respR::pcrit()`
- FIX:  Fix for plot failure when results were very close together.


========================== import_file() ============================
- NEW: Imports European style formatted numeric data which uses commas instead of points for decimals.
- NEW: Support for Presens Datamanager files
- CHANGE: imports now generally don't remove any columns (e.g. empty or NA columns). Column names now much improved (unique names, data type linked to channel IDs).
- CHANGE: import_file - updated supported systems list
- FIX: Fix for PreSens Oxyvew csv and txt files not being imported as numeric. Now separate parsing for each.
- FIX: Fix for MiniDot files not being imported as numeric.
- FIX: Fix for Pyro/Firesting numeric columns being imported as character when Firesting software replaces missing data with "---"

========================== format_time() ============================
- CHANGE: numeric time column name changed from `elapsed` to `time.num` (elapsed is not a good term, esp. for non-english speakers)
- FIX: fix for not appending new numeric time column onto a data.table
- FIX: fix for data.frames columns being renamed on return (by using data.frame instead of cbind)